--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "yew"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
+repository = "https://github.com/DenisKolodin/yew"
+homepage = "https://github.com/DenisKolodin/yew"
+documentation = "https://docs.rs/yew/"
+license = "MIT/Apache-2.0"
+readme = "README.md"
+keywords = ["web", "asmjs", "webasm", "javascript"]
+categories = ["gui", "web-programming"]
+description = "A framework for making client-side single-page apps"
 
 [dependencies]
 stdweb = { git = "https://github.com/koute/stdweb" }
