--- a/examples/todomvc/Cargo.toml
+++ b/examples/todomvc/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 
 [dependencies]
+strum = "0.8.0"
+strum_macros = "0.8.0"
 yew = { path = "../.." }
