--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ categories = ["gui", "web-programming"]
 description = "A framework for making client-side single-page apps"
 
 [dependencies]
+serde = "1"
+serde_json = "1"
 stdweb = { git = "https://github.com/koute/stdweb" }
