--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ description = "A framework for making client-side single-page apps"
 [dependencies]
 serde = "1"
 serde_json = "1"
-stdweb = { git = "https://github.com/koute/stdweb" }
+stdweb = "0.2"
