--- a/examples/dashboard/server/Cargo.toml
+++ b/examples/dashboard/server/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "dashboard"
+name = "server"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 
 [dependencies]
-serde = "1"
-serde_derive = "1"
-yew = { path = "../.." }
+tungstenite = "0.5.2"
