--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ description = "A framework for making client-side single-page apps"
 serde = "1"
 serde_json = "1"
 stdweb = "0.3"
+
+[features]
+default = []
+web_test = []
