--- a/examples/custom_components/Cargo.toml
+++ b/examples/custom_components/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 
 [dependencies]
+serde = "1"
+serde_derive = "1"
 yew = { path = "../.." }
