--- a/examples/dashboard/client/Cargo.toml
+++ b/examples/dashboard/client/Cargo.toml
@@ -7,3 +7,8 @@ authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 serde = "1"
 serde_derive = "1"
 yew = { path = "../../.." }
+
+# Necessary until IoVec cuts a new release supporting Wasm
+# More info: https://github.com/DenisKolodin/yew/issues/102
+[replace]
+"iovec:0.1.1" = { git = 'https://github.com/machineloop/iovec', branch = 'wasm-support' }
