--- a/examples/game_of_life/Cargo.toml
+++ b/examples/game_of_life/Cargo.toml
@@ -6,3 +6,8 @@ authors = ["Diego Cardoso <dige0card0s0@hotmail.com>"]
 [dependencies]
 yew = { path = "../.." }
 rand = "0.4.1"
+
+# Necessary until IoVec cuts a new release supporting Wasm
+# More info: https://github.com/DenisKolodin/yew/issues/102
+[replace]
+"iovec:0.1.1" = { git = 'https://github.com/machineloop/iovec', branch = 'wasm-support' }
