--- a/examples/mount_point/Cargo.toml
+++ b/examples/mount_point/Cargo.toml
@@ -6,3 +6,8 @@ authors = ["Ben Berman <ben@standardbots.com>"]
 [dependencies]
 yew = { path = "../.." }
 stdweb = "0.3"
+
+# Necessary until IoVec cuts a new release supporting Wasm
+# More info: https://github.com/DenisKolodin/yew/issues/102
+[replace]
+"iovec:0.1.1" = { git = 'https://github.com/machineloop/iovec', branch = 'wasm-support' }
