--- a/examples/npm_and_rest/Cargo.toml
+++ b/examples/npm_and_rest/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 
 [dependencies]
+failure = "0.1"
 serde = "1"
 serde_derive = "1"
+stdweb = "0.4"
 yew = { path = "../.." }
-stdweb = "0.3"
