--- a/examples/showcase/sub/two_apps/Cargo.toml
+++ b/examples/showcase/sub/two_apps/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 
 [dependencies]
 stdweb = "0.4"
-yew = { path = "../.." }
+yew = { path = "../../../.." }
