--- a/examples/fragments/Cargo.toml
+++ b/examples/fragments/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "timer"
+name = "fragments"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 
 [dependencies]
-yew = { path = "../../../.." }
+yew = { path = "../.." }
