--- a/examples/inner_html/Cargo.toml
+++ b/examples/inner_html/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Garrett Berg <vitiral@gmail.com>"]
 
 [dependencies]
 stdweb = "0.4.2"
-yew = { path = "../../../.." }
+yew = { path = "../.." }
