--- a/examples/crm/Cargo.toml
+++ b/examples/crm/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "fragments"
+name = "crm"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 
 [dependencies]
-yew = { path = "../../../.." }
+serde = "1"
+serde_derive = "1"
+yew = { path = "../.." }
