--- a/examples/dashboard/Cargo.toml
+++ b/examples/dashboard/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "npm_and_rest"
+name = "dashboard"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 
@@ -7,5 +7,4 @@ authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 failure = "0.1"
 serde = "1"
 serde_derive = "1"
-stdweb = "0.4"
-yew = { path = "../../../.." }
+yew = { path = "../.." }
