--- a/examples/npm_and_rest/Cargo.toml
+++ b/examples/npm_and_rest/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "todomvc"
+name = "npm_and_rest"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 
 [dependencies]
-strum = "0.8.0"
-strum_macros = "0.8.0"
+failure = "0.1"
 serde = "1"
 serde_derive = "1"
-yew = { path = "../../../.." }
+stdweb = "0.4"
+yew = { path = "../.." }
