--- a/examples/timer/Cargo.toml
+++ b/examples/timer/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "dashboard"
+name = "timer"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 
 [dependencies]
-failure = "0.1"
-serde = "1"
-serde_derive = "1"
-yew = { path = "../../../.." }
+yew = { path = "../.." }
