--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde = "1"
 serde_json = "1"
 stdweb = "0.4"
 slab = "0.4"
+toml = { version = "0.4", optional = true }
 
 [dev-dependencies]
 serde_derive = "1"
