Add YAML serialization format

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1"
 stdweb = "0.4"
 slab = "0.4"
 toml = { version = "0.4", optional = true }
+serde_yaml = { version = "0.7", optional = true }
 
 [dev-dependencies]
 serde_derive = "1"
@@ -26,3 +27,4 @@ serde_derive = "1"
 [features]
 default = []
 web_test = []
+yaml = ["serde_yaml"]
