Add MessagePack serialization format

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ stdweb = "0.4"
 slab = "0.4"
 toml = { version = "0.4", optional = true }
 serde_yaml = { version = "0.7", optional = true }
+rmp-serde = { version = "0.13.7", optional = true }
 
 [dev-dependencies]
 serde_derive = "1"
@@ -28,3 +29,4 @@ serde_derive = "1"
 default = []
 web_test = []
 yaml = ["serde_yaml"]
+msgpack = ["rmp-serde"]
