Add CBOR serialization format

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ slab = "0.4"
 toml = { version = "0.4", optional = true }
 serde_yaml = { version = "0.7", optional = true }
 rmp-serde = { version = "0.13.7", optional = true }
+serde_cbor = { version = "0.8.2", optional = true }
 
 [dev-dependencies]
 serde_derive = "1"
@@ -30,3 +31,4 @@ default = []
 web_test = []
 yaml = ["serde_yaml"]
 msgpack = ["rmp-serde"]
+cbor = ["serde_cbor"]
