--- a/examples/game_of_life/Cargo.toml
+++ b/examples/game_of_life/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Diego Cardoso <dige0card0s0@hotmail.com>",
            "Ilya Bogdanov <fumlead@gmail.com"]
 
 [dependencies]
+rand = { version = "0.5.0-pre.1", features = ["stdweb"] }
 yew = { path = "../.." }
-rand = "0.4.1"
