--- a/examples/game_of_life/Cargo.toml
+++ b/examples/game_of_life/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "game_of_life"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Diego Cardoso <dige0card0s0@hotmail.com>",
-           "Ilya Bogdanov <fumlead@gmail.com"]
+           "Ilya Bogdanov <fumlead@gmail.com",
+           "Junjie Huang <huangjj.27@qq.com>"]
 
 [dependencies]
 rand = { version = "0.5.0-pre.1", features = ["stdweb"] }
