--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ description = "A framework for making client-side single-page apps"
 
 [dependencies]
 failure = "0.1"
+log = "0.4"
 http = "0.1"
 serde = "1"
 serde_json = "1"
