Use web_logger crate in the showcase example

--- a/examples/showcase/Cargo.toml
+++ b/examples/showcase/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>", "Limira"]
 
 [dependencies]
+log = "0.4"
+web_logger = "0.1"
 strum = "0.9"
 strum_macros = "0.9"
 yew = { path = "../.." }
