--- a/examples/game_of_life/Cargo.toml
+++ b/examples/game_of_life/Cargo.toml
@@ -7,4 +7,6 @@ authors = ["Diego Cardoso <dige0card0s0@hotmail.com>",
 
 [dependencies]
 rand = { version = "0.5.0-pre.1", features = ["stdweb"] }
+log = "0.4"
+web_logger = "0.1"
 yew = { path = "../.." }
