--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ description = "A framework for making client-side single-page apps"
 failure = "0.1"
 log = "0.4"
 http = "0.1"
-serde = "1"
-serde_json = "1"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+bincode = "1.0"
 stdweb = "0.4"
 toml = { version = "0.4", optional = true }
 serde_yaml = { version = "0.7", optional = true }
