Add Markdown support to CRM example

--- a/examples/crm/Cargo.toml
+++ b/examples/crm/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 serde = "1"
 serde_derive = "1"
 yew = { path = "../.." }
+pulldown-cmark = "0.1.2"
