--- a/examples/counter/Cargo.toml
+++ b/examples/counter/Cargo.toml
@@ -2,6 +2,7 @@
 name = "counter"
 version = "0.1.1"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 stdweb = "0.4.2"
