--- a/examples/crm/Cargo.toml
+++ b/examples/crm/Cargo.toml
@@ -2,6 +2,7 @@
 name = "crm"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 serde = "1"
