--- a/examples/custom_components/Cargo.toml
+++ b/examples/custom_components/Cargo.toml
@@ -2,6 +2,7 @@
 name = "custom_components"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 yew = { path = "../.." }
