--- a/examples/game_of_life/Cargo.toml
+++ b/examples/game_of_life/Cargo.toml
@@ -4,11 +4,10 @@ version = "0.1.3"
 authors = ["Diego Cardoso <dige0card0s0@hotmail.com>",
            "Ilya Bogdanov <fumlead@gmail.com",
            "Junjie Huang <huangjj.27@qq.com>"]
+edition = "2018"
 
 [dependencies]
-# Temporary check
-rand = { git = "https://github.com/rust-lang-nursery/rand", features = ["stdweb"] }
-#rand = { version = "0.5.0-pre.1", features = ["stdweb"] }
+rand = { version = "0.6.5", features = ["stdweb"] }
 log = "0.4"
 web_logger = "0.1"
 yew = { path = "../.." }
