--- a/examples/inner_html/Cargo.toml
+++ b/examples/inner_html/Cargo.toml
@@ -2,6 +2,7 @@
 name = "inner_html"
 version = "0.1.0"
 authors = ["Garrett Berg <vitiral@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 stdweb = "0.4.2"
