--- a/examples/js_callback/Cargo.toml
+++ b/examples/js_callback/Cargo.toml
@@ -2,6 +2,7 @@
 name = "js_callback"
 version = "0.1.0"
 authors = ["Scott Steele <scottlsteele@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 yew = { path = "../.." }
