--- a/examples/large_table/Cargo.toml
+++ b/examples/large_table/Cargo.toml
@@ -2,6 +2,7 @@
 name = "large_table"
 version = "0.1.0"
 authors = ["qthree <qthree3@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 yew = { path = "../.." }
