--- a/examples/multi_thread/Cargo.toml
+++ b/examples/multi_thread/Cargo.toml
@@ -2,6 +2,7 @@
 name = "multi_thread"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 log = "0.4"
