--- a/examples/routing/Cargo.toml
+++ b/examples/routing/Cargo.toml
@@ -2,6 +2,7 @@
 name = "routing"
 version = "0.1.0"
 authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 log = "0.4"
