--- a/examples/server/Cargo.toml
+++ b/examples/server/Cargo.toml
@@ -2,6 +2,7 @@
 name = "server"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 tungstenite = "0.5.2"
