--- a/examples/showcase/Cargo.toml
+++ b/examples/showcase/Cargo.toml
@@ -2,6 +2,7 @@
 name = "showcase"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>", "Limira"]
+edition = "2018"
 
 [dependencies]
 log = "0.4"
