--- a/examples/textarea/Cargo.toml
+++ b/examples/textarea/Cargo.toml
@@ -2,6 +2,7 @@
 name = "textarea"
 version = "0.1.0"
 authors = ["Andrew Straw <strawman@astraw.com>"]
+edition = "2018"
 
 [dependencies]
 yew = { path = "../.." }
