--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ http = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-bincode = "1.0"
+bincode = "=1.0.1"
 anymap = "0.12"
 slab = "0.4"
 stdweb = "^0.4.13"
