Add html-common and tokenize

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ path = "main.rs"
 [dependencies]
 yew-html = { path = "html" }
 yew-html-impl = { path = "html-impl" }
+yew-html-common = { path = "html-common" }
