Use cursor for peeking and remove HtmlListChildren

--- a/html-common/Cargo.toml
+++ b/html-common/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 edition = "2018"
 
 [dependencies]
+boolinator = "2.4.0"
 syn = { version = "0.15", features = ["full"] }
 quote = "0.6"
 proc-macro-hack = "0.5"
