Fix syn dependency version range

--- a/crates/macro-impl/Cargo.toml
+++ b/crates/macro-impl/Cargo.toml
@@ -11,4 +11,4 @@ boolinator = "2.4.0"
 proc-macro-hack = "0.5"
 proc-macro2 = "0.4"
 quote = "0.6"
-syn = { version = "0.15.34", features = ["full"] }
+syn = { version = "^0.15.34", features = ["full"] }
