--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
 name = "yew-shared"
 version = "0.7.0"
+edition = "2018"
 
 [lib]
 
 [dependencies]
 log = "0.4"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 bincode = "=1.0.1"
 anymap = "0.12"
 slab = "0.4"
 stdweb = "^0.4.14"
+
+[dev-dependencies]
+yew = { path = "../.." }
