--- a/examples/routing/Cargo.toml
+++ b/examples/routing/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 web_logger = "0.1"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 yew = { path = "../.." }
 stdweb = "0.4"
