--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -11,7 +11,13 @@ serde = { version = "1.0", features = ["derive"] }
 bincode = "=1.0.1"
 anymap = "0.12"
 slab = "0.4"
-stdweb = "^0.4.14"
+stdweb = "^0.4.16"
+
+[target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
+wasm-bindgen = "0.2"
 
 [dev-dependencies]
 yew = { path = "../.." }
+
+[target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dev-dependencies]
+wasm-bindgen-test = "0.2"
