Add support for required props

--- a/crates/macro/Cargo.toml
+++ b/crates/macro/Cargo.toml
@@ -25,5 +25,5 @@ proc-macro2 = "0.4"
 quote = "0.6"
 syn = { version = "^0.15.34", features = ["full"] }
 
-[dev-dependencies]
-yew = { path = "../.." }
+[build-dependencies]
+autocfg = "0.1.3"
