--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,7 @@ edition = "2018"
 failure = "0.1"
 log = "0.4"
 http = "0.1"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bincode = "=1.0.1"
 anymap = "0.12"
@@ -28,7 +27,6 @@ serde_yaml = { version = "0.8.3", optional = true }
 rmp-serde = { version = "0.13.7", optional = true }
 serde_cbor = { version = "0.9.0", optional = true }
 yew-macro = { path = "crates/macro" }
-yew-shared = { path = "crates/shared" }
 
 [target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2"
@@ -50,7 +48,6 @@ cbor = ["serde_cbor"]
 members = [
   "crates/macro",
   "crates/macro-impl",
-  "crates/shared",
   "examples/counter",
   "examples/crm",
   "examples/custom_components",
