--- a/crates/macro/Cargo.toml
+++ b/crates/macro/Cargo.toml
@@ -2,17 +2,14 @@
 name = "yew-macro"
 version = "0.7.0"
 edition = "2018"
-autotests = false
 
-[[test]]
-name = "tests"
-path = "tests/cases.rs"
-
-[dev-dependencies]
-trybuild = "1.0"
-yew = { path = "../.." }
+[lib]
+proc-macro = true
 
 [dependencies]
+boolinator = "2.4.0"
+lazy_static = "1.3.0"
 proc-macro-hack = "0.5"
-proc-macro-nested = "0.1"
-yew-macro-impl = { path = "../macro-impl" }
+proc-macro2 = "0.4"
+quote = "0.6"
+syn = { version = "^0.15.34", features = ["full"] }
