--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ wasm-bindgen = "0.2"
 [dev-dependencies]
 serde_derive = "1"
 trybuild = "1.0"
+rustversion = "0.1"
 
 [target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dev-dependencies]
 wasm-bindgen-test = "0.2"
