--- a/crates/macro/Cargo.toml
+++ b/crates/macro/Cargo.toml
@@ -7,8 +7,8 @@ repository = "https://github.com/DenisKolodin/yew"
 homepage = "https://github.com/DenisKolodin/yew"
 documentation = "https://docs.rs/yew-macro/"
 license = "MIT/Apache-2.0"
-keywords = ["web", "wasm", "frontend", "asmjs", "webasm", "webassembly"]
-categories = ["gui", "web-programming", "webassembly"]
+keywords = ["web", "wasm", "frontend", "webasm", "webassembly"]
+categories = ["gui", "web-programming", "wasm"]
 description = "A framework for making client-side single-page apps"
 
 [badges]
@@ -17,9 +17,6 @@ travis-ci = { repository = "DenisKolodin/yew" }
 [lib]
 proc-macro = true
 
-[dev-dependencies]
-yew = { path = "../.." }
-
 [dependencies]
 boolinator = "2.4.0"
 lazy_static = "1.3.0"
@@ -27,3 +24,6 @@ proc-macro-hack = "0.5"
 proc-macro2 = "0.4"
 quote = "0.6"
 syn = { version = "^0.15.34", features = ["full"] }
+
+[dev-dependencies]
+yew = { path = "../.." }
