Incorporate review comments

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ anymap = "0.12"
 bincode = "=1.0.1"
 failure = "0.1"
 http = "0.1"
+indexmap = "1.0.2"
 log = "0.4"
 proc-macro-hack = "0.5"
 proc-macro-nested = "0.1"
