--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ matrix:
 install:
   - nvm install 9
   - rustup target add wasm32-unknown-unknown
-  - cargo install wasm-bindgen-cli --force
+  - cargo install --force --version 0.2.42 -- wasm-bindgen-cli
   - curl --retry 5 -LO https://chromedriver.storage.googleapis.com/2.41/chromedriver_linux64.zip
   - unzip chromedriver_linux64.zip
   - ./ci/install_cargo_web.sh
