--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ toml = { version = "0.4", optional = true }
 yew-macro = { version = "0.8.0", path = "crates/macro" }
 
 [target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
-wasm-bindgen = "0.2"
+wasm-bindgen = "=0.2.42"
 
 [dev-dependencies]
 serde_derive = "1"
@@ -50,6 +50,7 @@ wasm-bindgen-test = "0.2"
 [features]
 default = []
 web_test = []
+wasm_test = []
 yaml = ["serde_yaml"]
 msgpack = ["rmp-serde"]
 cbor = ["serde_cbor"]
