--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ matrix:
 
 install:
   - nvm install 9
+  - rustup component add rustfmt
   - rustup target add wasm32-unknown-unknown
   - cargo install --force --version 0.2.42 -- wasm-bindgen-cli
   - curl --retry 5 -LO https://chromedriver.storage.googleapis.com/2.41/chromedriver_linux64.zip
@@ -38,4 +39,5 @@ install:
   - ./ci/install_cargo_web.sh
 
 script:
+  - cargo fmt --all -- --check
   - CHROMEDRIVER=$(pwd)/chromedriver ./ci/run_tests.sh
