--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ branches:
     - staging
     - trying
     - master
+    - futures
 
 language: rust
 
@@ -19,8 +20,8 @@ cache:
     - $HOME/.local/share/cargo-web/emscripten
 
 rust:
-  - 1.35.0 # min supported
-  - stable
+  # - 1.39.0 # min supported
+  # - stable
   - beta
   - nightly
 
@@ -33,7 +34,7 @@ install:
   - nvm install 9
   - rustup component add rustfmt
   - rustup target add wasm32-unknown-unknown
-  - cargo install --force --version 0.2.42 -- wasm-bindgen-cli
+  - cargo install --force --version 0.2.51 -- wasm-bindgen-cli
   - curl --retry 5 -LO https://chromedriver.storage.googleapis.com/2.41/chromedriver_linux64.zip
   - unzip chromedriver_linux64.zip
   - ./ci/install_cargo_web.sh
