--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,14 @@ cache: cargo
 
 rust:
   - 1.35.0 # min supported
-  - stable
-  - beta
-  - nightly
+  # - stable
+  # - beta
+  # - nightly
 
-matrix:
-  allow_failures:
-    - rust: nightly
-  fast_finish: true
+# matrix:
+#   allow_failures:
+#     - rust: nightly
+#   fast_finish: true
 
 install:
   - nvm install 9
