--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,8 @@
-[build]
+[target.'cfg(not(not(feature = "doc_test")))']
 target = 'wasm32-unknown-unknown'
 
 [target.'cfg(all(target_arch = "wasm32", not(cargo_web)))']
 runner = 'wasm-bindgen-test-runner'
+
+[alias]
+doc_test = "test --doc --features doc_test"
