--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,15 @@ branches:
     - master
     - travis
 
-language: rust
-
 dist: trusty
+language: rust
 sudo: false
 addons:
   chrome: stable
 
 cache: cargo
+before_cache:
+  - ./ci/clear_cache.sh
 
 rust:
   - 1.35.0 # min supported
