--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ yew-macro = { version = "0.10.0", path = "crates/macro" }
 
 [target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.51"
+wasm-bindgen-futures = "0.4.2"
 
 [dev-dependencies]
 serde_derive = "1"
