--- a/examples/futures/Cargo.toml
+++ b/examples/futures/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 yew = { path = "../.." }
+web-sys = "0.3.30"
 
 [target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.51"
