--- a/examples/futures/Cargo.toml
+++ b/examples/futures/Cargo.toml
@@ -9,7 +9,19 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 yew = { path = "../.." }
-web-sys = "0.3.30"
+wasm-bindgen-futures = "0.4.3"
+
+[dependencies.web-sys]
+version = "0.3.30"
+features = [
+  'Headers',
+  'Request',
+  'RequestInit',
+  'RequestMode',
+  'Response',
+  'Window',
+]
+#web-sys = "0.3.30"
 
 [target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.51"
