--- a/examples/futures/Cargo.toml
+++ b/examples/futures/Cargo.toml
@@ -3,6 +3,9 @@ name = "futures"
 version = "0.1.0"
 authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition = "2018"
+description = "web_sys fetching and futures demonstration"
+license = "MIT/Apache"
+repository = "https://github.com/yewstack/yew"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -21,7 +24,6 @@ features = [
   'Response',
   'Window',
 ]
-#web-sys = "0.3.30"
 
 [target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.51"
