--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_cache:
   - ./ci/clear_cache.sh
 
 rust:
-  - 1.35.0 # min supported
-  - stable
+  - 1.39.0 # min supported
+  # - stable (enable when 1.40.0 is released)
   - beta
   - nightly
 
