--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ branches:
 dist: trusty
 language: rust
 sudo: false
+services:
+  - docker
 addons:
   chrome: stable
 
@@ -15,9 +17,9 @@ before_cache:
   - ./ci/clear_cache.sh
 
 rust:
-  - 1.39.0 # min supported
-  # - stable (enable when 1.40.0 is released)
-  - beta
+  # - 1.39.0 # min supported (enable when 1.40.0 is released)
+  # - stable
+  # - beta
   - nightly
 
 matrix:
@@ -25,7 +27,12 @@ matrix:
     - rust: nightly
   fast_finish: true
 
+before_install:
+  - docker run -dit --name emscripten -v /home/travis/:/home/travis/ trzeci/emscripten:1.38.46-upstream bash
+
 install:
+  - mkdir -p /home/travis/.local/bin
+  - cp ./ci/emcc /home/travis/.local/bin/emcc # ensure cargo-web knows that emscripten is installed
   - nvm install 9
   - rustup component add rustfmt
   - rustup component add clippy
