--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,9 @@ bincode = { version = "~1.2.1", optional = true }
 failure = "0.1"
 http = "0.2"
 indexmap = "1.0.2"
+js-sys = { version = "0.3.32", optional = true }
 log = "0.4"
+paste = "0.1"
 proc-macro-hack = "0.5"
 proc-macro-nested = "0.1"
 rmp-serde = { version = "0.14.0", optional = true }
@@ -33,9 +35,21 @@ serde_cbor = { version = "0.10.2", optional = true }
 serde_json = "1.0"
 serde_yaml = { version = "0.8.3", optional = true }
 slab = "0.4"
-stdweb = "0.4.20"
+stdweb = { version = "0.4.20", optional = true }
 toml = { version = "0.5", optional = true }
 yew-macro = { version = "0.10.1", path = "crates/macro" }
+
+[dependencies.web-sys]
+version = "0.3.32"
+optional = true
+features = [
+  "Element",
+  "Event",
+  "EventTarget",
+  "FileList",
+  "HtmlSelectElement",
+  "TouchEvent",
+]
 
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.56"
@@ -53,7 +67,8 @@ trybuild = "1.0"
 rustversion = "1.0"
 
 [features]
-default = ["services", "agent"]
+default = ["services", "agent", "stdweb"]
+web_sys = ["web-sys", "js-sys"]
 doc_test = []
 web_test = []
 wasm_test = []
