--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,9 +49,12 @@ features = [
     "EventTarget",
     "FileList",
     "FocusEvent",
+    "HtmlInputElement",
     "HtmlSelectElement",
+    "HtmlTextAreaElement",
     "KeyboardEvent",
     "MouseEvent",
+    "Node",
     "PointerEvent",
     "TouchEvent",
     "UiEvent",
