--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,35 @@ stdweb = "0.4.20"
 toml = { version = "0.5", optional = true }
 yew-macro = { version = "0.10.1", path = "crates/macro" }
 
+[dependencies.web-sys]
+version = "0.3.32"
+optional = true
+features = [
+  "DedicatedWorkerGlobalScope",
+  "Document",
+  "DomTokenList",
+  "DragEvent",
+  "Element",
+  "Event",
+  "EventTarget",
+  "FileList",
+  "FocusEvent",
+  "HtmlInputElement",
+  "HtmlSelectElement",
+  "HtmlTextAreaElement",
+  "KeyboardEvent",
+  "MessageEvent",
+  "MouseEvent",
+  "Node",
+  "PointerEvent",
+  "Text",
+  "TouchEvent",
+  "UiEvent",
+  "WheelEvent",
+  "Window",
+  "Worker",
+]
+
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.56"
 wasm-bindgen-futures = "0.4.4"
