--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,6 @@ bincode = { version = "~1.2.1", optional = true }
 failure = "0.1"
 http = "0.2"
 indexmap = "1.0.2"
-js-sys = { version = "0.3.32", optional = true }
 log = "0.4"
 proc-macro-hack = "0.5"
 proc-macro-nested = "0.1"
@@ -34,31 +33,9 @@ serde_cbor = { version = "0.10.2", optional = true }
 serde_json = "1.0"
 serde_yaml = { version = "0.8.3", optional = true }
 slab = "0.4"
-stdweb = { version = "0.4.20", optional = true }
+stdweb = "0.4.20"
 toml = { version = "0.5", optional = true }
 yew-macro = { version = "0.10.1", path = "crates/macro" }
-
-[dependencies.web-sys]
-version = "0.3.32"
-optional = true
-features = [
-  "DragEvent",
-  "Element",
-  "Event",
-  "EventTarget",
-  "FileList",
-  "FocusEvent",
-  "HtmlInputElement",
-  "HtmlSelectElement",
-  "HtmlTextAreaElement",
-  "KeyboardEvent",
-  "MouseEvent",
-  "Node",
-  "PointerEvent",
-  "TouchEvent",
-  "UiEvent",
-  "WheelEvent",
-]
 
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.56"
@@ -76,8 +53,7 @@ trybuild = "1.0"
 rustversion = "1.0"
 
 [features]
-default = ["services", "agent", "stdweb"]
-web_sys = ["web-sys", "js-sys"]
+default = ["services", "agent"]
 doc_test = []
 web_test = []
 wasm_test = []
