--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ travis-ci = { repository = "yewstack/yew" }
 anymap = "0.12"
 bincode = { version = "~1.2.1", optional = true }
 failure = "0.1"
+gloo = { version = "0.2", optional = true }
 http = "0.2"
 indexmap = "1.0.2"
 js-sys = { version = "0.3.33", optional = true }
@@ -42,6 +43,10 @@ yew-macro = { version = "0.10.1", path = "crates/macro" }
 version = "0.3.33"
 optional = true
 features = [
+  "AbortController",
+  "AbortSignal",
+  "BinaryType",
+  "Blob",
   "console",
   "DedicatedWorkerGlobalScope",
   "Document",
@@ -50,8 +55,11 @@ features = [
   "Element",
   "Event",
   "EventTarget",
+  "File",
   "FileList",
+  "FileReader",
   "FocusEvent",
+  "Headers",
   "HtmlInputElement",
   "HtmlSelectElement",
   "HtmlTextAreaElement",
@@ -60,20 +68,31 @@ features = [
   "MessageEvent",
   "MouseEvent",
   "Node",
+  "ObserverCallback",
   "PointerEvent",
+  "ReferrerPolicy",
+  "Request",
+  "RequestCache",
+  "RequestCredentials",
+  "RequestInit",
+  "RequestMode",
+  "RequestRedirect",
+  "Response",
+  "Storage",
   "Text",
   "TouchEvent",
   "UiEvent",
+  "WebSocket",
   "WheelEvent",
   "Window",
   "Worker",
 ]
 
-[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
+[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi")))'.dependencies]
 wasm-bindgen = "0.2.56"
 wasm-bindgen-futures = "0.4.4"
 
-[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dev-dependencies]
+[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi")))'.dev-dependencies]
 wasm-bindgen-test = "0.3.4"
 
 [target.'cfg(target_os = "emscripten")'.dependencies]
@@ -85,8 +104,9 @@ trybuild = "1.0"
 rustversion = "1.0"
 
 [features]
-default = ["services", "agent", "stdweb"]
-web_sys = ["web-sys", "js-sys"]
+default = ["services", "agent"]
+std_web = ["stdweb"]
+web_sys = ["gloo", "js-sys", "web-sys"]
 doc_test = []
 web_test = []
 wasm_test = []
