Revert some `cargo_web` handling removal.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,7 +88,7 @@ features = [
   "Worker",
 ]
 
-[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi")))'.dependencies]
+[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.56"
 wasm-bindgen-futures = "0.4.4"
 
