--- a/examples/futures/Cargo.toml
+++ b/examples/futures/Cargo.toml
@@ -15,7 +15,7 @@ yew = { path = "../.." }
 wasm-bindgen-futures = "0.4.3"
 
 [dependencies.web-sys]
-version = "0.3.30"
+version = "0.3.33"
 features = [
   'Headers',
   'Request',
@@ -27,3 +27,7 @@ features = [
 
 [target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.58"
+
+[features]
+std_web = ["yew/std_web"]
+web_sys = ["yew/web_sys"]
