--- a/examples/file_upload/Cargo.toml
+++ b/examples/file_upload/Cargo.toml
@@ -5,4 +5,9 @@ authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+js-sys = { version = "0.3", optional = true }
 yew = { path = "../.." }
+
+[features]
+std_web = ["yew/std_web"]
+web_sys = ["js-sys", "yew/web_sys"]
