--- a/examples/js_callback/Cargo.toml
+++ b/examples/js_callback/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2018"
 
 [dependencies]
 yew = { path = "../.." }
-stdweb = "^0.4.20"
+stdweb = { version = "^0.4.20", optional = true }
 
 [target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.58"
+
+[features]
+std_web = ["stdweb", "yew/std_web"]
+web_sys = ["yew/web_sys"]
