--- a/examples/node_refs/Cargo.toml
+++ b/examples/node_refs/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2018"
 
 [dependencies]
 yew = { path = "../.." }
-stdweb = "0.4.20"
+stdweb = { version = "0.4.20", optional = true }
+web-sys = { version = "0.3", optional = true, features = ["HtmlElement", "HtmlInputElement", "Node"] }
+
+[features]
+std_web = ["stdweb", "yew/std_web"]
+web_sys = ["web-sys", "yew/web_sys"]
