--- a/examples/todomvc/Cargo.toml
+++ b/examples/todomvc/Cargo.toml
@@ -10,3 +10,7 @@ strum_macros = "0.13"
 serde = "1"
 serde_derive = "1"
 yew = { path = "../.." }
+
+[features]
+std_web = ["yew/std_web"]
+web_sys = ["yew/web_sys"]
