--- a/examples/two_apps/Cargo.toml
+++ b/examples/two_apps/Cargo.toml
@@ -5,5 +5,10 @@ authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-stdweb = "0.4.20"
+stdweb = { version = "0.4.20", optional = true }
+web-sys = { version = "0.3", optional = true, features = ["Document", "Window"] }
 yew = { path = "../.." }
+
+[features]
+std_web = ["stdweb", "yew/std_web"]
+web_sys = ["web-sys", "yew/web_sys"]
