--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,7 +91,7 @@ features = [
   "WorkerOptions",
 ]
 
-[target.'cfg(all(not(target_os="wasi"), not(cargo_web)))'.dependencies]
+[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.56"
 wasm-bindgen-futures = "0.4.4"
 
