--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ serde_yaml = { version = "0.8.3", optional = true }
 slab = "0.4"
 stdweb = { version = "0.4.20", optional = true }
 toml = { version = "0.5", optional = true }
+wee_alloc = { version = "0.4.5", optional = true }
 yew-macro = { version = "0.10.1", path = "crates/macro" }
 
 [dependencies.web-sys]
@@ -109,7 +110,7 @@ rustversion = "1.0"
 [features]
 default = ["services", "agent"]
 std_web = ["stdweb"]
-web_sys = ["console_error_panic_hook", "gloo", "js-sys", "web-sys"]
+web_sys = ["console_error_panic_hook", "gloo", "js-sys", "web-sys", "wee_alloc"]
 doc_test = []
 web_test = []
 wasm_test = []
