--- a/examples/web_sys/npm_and_rest/Cargo.toml
+++ b/examples/web_sys/npm_and_rest/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-failure = "0.1"
+anyhow = "1"
 js-sys = "0.3"
 serde = "1"
 serde_derive = "1"
