Fix spawning workers in combination with `wasm-bindgen`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ features = [
   "AbortSignal",
   "BinaryType",
   "Blob",
+  "BlobPropertyBag",
   "console",
   "DedicatedWorkerGlobalScope",
   "Document",
@@ -91,6 +92,7 @@ features = [
   "Text",
   "TouchEvent",
   "UiEvent",
+  "Url",
   "WebSocket",
   "WheelEvent",
   "Window",
