Re-enable services and agent features by default (#984)
* Re-enable services and agent features by default

* Fix failing tests

* Fix doc tests

* cargo fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,6 @@ features = [
   "console",
   "DedicatedWorkerGlobalScope",
   "Document",
-  "DomException",
   "DomTokenList",
   "DragEvent",
   "Element",
@@ -122,7 +121,7 @@ rmp-serde = "0.14.0"
 bincode = "~1.2.1"
 
 [features]
-default = []
+default = ["services", "agent"]
 std_web = ["stdweb"]
 web_sys = ["console_error_panic_hook", "futures", "gloo", "js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]
 doc_test = []
