tests now run on web_sys only, making functional yew backend agnostic

--- a/crates/functional/Cargo.toml
+++ b/crates/functional/Cargo.toml
@@ -16,12 +16,12 @@ travis-ci = { repository = "yewstack/yew" }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.9"
+cfg-if = "0.1.10"
+web-sys = { version = "0.3.36" }
+yew = { path = "../..", features = ["web_sys"] }
 
 [dependencies]
 yew = { path = "../.." }
-web-sys = { version = "0.3.36", optional = true }
-stdweb = { version = "0.4.20", optional = true }
-cfg-if = "0.1.10"
 
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.59"
@@ -31,5 +31,3 @@ wasm-bindgen-test = "0.3.4"
 
 [features]
 wasm_test = []
-web_sys = ["yew/web_sys", "web-sys"]
-std_web = ["yew/std_web", "stdweb"]
